# llama-stack-demo

./: .gitignore  README.md  WORKSHOP.md
client/: .env  Containerfile  README.md  app.py  files.py  image.sh  pyproject.toml  rag-loader.py  rag-loader.sh  run.py  run.sh  utils.py  vector_stores.py
client/commands/: agent_command.py  load_command.py  search_command.py  tool_command.py
helm/: .helmignore  nvidia-jina-v3.yaml  nvidia.yaml  run.sh  values-app.yaml  values-llama-stack.yaml  values-observability.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  grafana-dashboard-traces.yaml  grafana-datasource-rhoai.yaml  grafana-datasource-tempo.yaml  grafana-folder.yaml  grafana-proxy-rbac.yaml  grafana.yaml  hardware-profile.yaml  hooks.yaml  lsd-genai-playground.yaml  lsd.yaml  mcp-servers-cm.yaml  mcp-servers.yaml  modelcar-connections.yaml  models.yaml  monitoring-dsci.yaml  otel-collector.yaml  otel-instrumentation.yaml  pipelines.yaml  playground.yaml  postgresql.yaml  run.yaml  (+2 more)
materials/: basic_ragas.jpynb
pipelines/: README.md  compile-upsert-pipeline.sh  pyproject.toml  rag_pipeline.py  ragas_dataset_eval_direct.py  ragas_dataset_eval_llamastack.py  ragas_dataset_generator.py  ragas_pipeline.py  ragas_pipeline.yaml  ragas_pipeline_scheduler.py
pipelines/shared/: kubeflow.py
scripts/: assign-node-to-user.sh  assign-nodes-to-users.sh  check-monitoring-telemetry.sh  create-workshop-group.sh  setup-grafana-proxy-rbac.sh  setup-hardware-profile.sh  setup-htpasswd-oauth.sh  setup-mlflow.sh  setup-monitoring.sh  setup-rbac.sh  workshop-setup.sh
(+17 files in other folders)
