[project]
name = "rag-loader"
version = "0.1.0"
description = "A simplified loader for Retrieval-Augmented Generation (RAG)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "requests==2.32.5",
    "pyyaml==6.0.2",
    "llama-stack-client==0.3.2",
    "fire==0.7.1",
    "langchain>=1.0",
    "langchain-openai>=0.3.32",
    "langchain-core>=0.3.75",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
] 