[project]
name = "pipelines"
version = "0.1.0"
description = "Kubeflow pipelines for RAG"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "kfp[kubernetes] >= 2.13.0",
    "boto3==1.35.54",
    "tqdm==4.66.1",
    "docling[vlm]==2.31.0",
    "torch==2.2.2",
    "pymilvus==2.5.8",
    "llama-stack-client==0.3.5",
    "rapidocr-onnxruntime >= 1.4.4",
    "sqlalchemy >= 2.0.0",
]
